hphp/hack/test/typecheck/return_mismatch/return_with_and_without_expr6.php
<?hh

function test(int $x0): mixed {
  return  (int $i) ==> {
    if ($i == 1) {
        return 3;
      } else {
        return;
      }
  };
}
